--- a/extracted_project/package.json
+++ b/extracted_project/package.json
@@ -14,6 +14,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@types/react-router-dom": "^5.3.3",
+    "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.344.0",
@@ -22,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.5.1",
+    "tailwind-merge": "^3.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
